src/objects/IR_Email__c.object
<CustomObject>
    <fields>
        <fullName>Email_Body__c</fullName>
        <label>Email Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incident_Report__c</fullName>
        <label>Incident Report</label>
        <referenceTo>Incident_Report__c</referenceTo>
        <relationshipLabel>IR Emails</relationshipLabel>
        <relationshipName>IR_Emails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Initial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Mortem</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>IR Email</label>
    <nameField>
        <label>IR Email Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IR Emails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Email_Body_Required</fullName>
        <active>true</active>
        <errorConditionFormula>Email_Body__c = NULL</errorConditionFormula>
        <errorDisplayField>Email_Body__c</errorDisplayField>
        <errorMessage>Email Body cannot be empty</errorMessage>
    </validationRules>
</CustomObject>